# Copyright 2018 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_binary(
    name = "addition_and_subtraction",
    srcs = ["addition_and_subtraction.cc"],
)

cc_binary(
    name = "increment",
    srcs = ["increment.cc"],
)

cc_binary(
    name = "erasing_maximum",
    srcs = ["erasing_maximum.cc"],
)

cc_binary(
    name = "evaluation",
    srcs = ["evaluation.cc"],
)

cc_binary(
    name = "king",
    srcs = ["king.cc"],
)

cc_binary(
    name = "minimums_sum",
    srcs = ["minimums_sum.cc"],
)

cc_binary(
    name = "compare_sums",
    srcs = ["compare_sums.cc"],
)

cc_binary(
    name = "round_up",
    srcs = ["round_up.cc"],
)

cc_binary(
    name = "frequent_symbol",
    srcs = ["frequent_symbol.cc"],
)

cc_binary(
    name = "frequent_symbol_prefix",
    srcs = ["frequent_symbol_prefix.cc"],
)

